css/styles.css
.hidden {
  display: none;
}

body {
  font-family: "Roboto", sans-serif;
  color: #434455;
  background-color: #fff;
}

/* reset */

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
}

ul,
ol {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
}

button {
  cursor: pointer;
}

a {
  text-decoration: none;
}

input,
button,
textarea {
  font-family: inherit;
  font-size: inherit;
  color: inherit;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

/* all page */

.container {
  max-width: 320px;
  padding: 0 16px;
  margin: 0 auto;
}

.section {
  padding: 96px 0;
}

@media screen and (min-width: 768px) {
  .container {
    max-width: 768px;
  }
}

@media screen and (min-width: 1158px) {
  .container {
    max-width: 1158px;
    padding: 0 15px;
  }
  .section {
    padding: 120px 0;
  }
}

/* header */

.page-header {
  border-bottom: 1px solid #e7e9fc;
  box-shadow:
    0 1px 6px 0 rgba(46, 47, 66, 0.08),
    0 1px 1px 0 rgba(46, 47, 66, 0.16),
    0 2px 1px 0 rgba(46, 47, 66, 0.08);
}

.header-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav-list,
.contacts {
  display: none;
}

.logo {
  font-family: "Raleway", sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: #4d5ae5;
}

.header-logo {
  padding: 16px 0;
  display: block;
}

.header-logo .logo-part {
  color: #2e2f42;
}

.burger-btn {
  padding: 0;
  border: none;
  background-color: transparent;
}

.burger-icon {
  display: block;
  fill: #2f2f37;
}

@media screen and (min-width: 768px) {
  .burger-btn {
    display: none;
  }

  .header-logo {
    padding: 24px 0;
    margin-right: 120px;
  }

  .header-nav {
    display: flex;
    align-items: center;
  }

  .nav-list {
    display: flex;
    align-items: center;
    gap: 40px;
  }

  .nav-link {
    display: block;
    padding: 24px 0;
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: #2e2f42;

    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }

  .nav-link.current {
    position: relative;
  }

  .nav-link.current::after {
    content: "";
    position: absolute;
    left: 0;
    bottom: -1px;

    width: 100%;
    height: 4px;
    background-color: #404bbf;
    border-radius: 2px;
  }

  .nav-link:hover,
  .nav-link:focus,
  .contacts-link:hover,
  .contacts-link:focus,
  .nav-link.current {
    color: #404bbf;
  }

  .contacts {
    display: block;
    font-style: normal;
  }
}

.contacts-list {
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.contacts-link {
  display: block;
  font-size: 12px;
  line-height: 1.17;
  letter-spacing: 0.04em;
  color: #434455;

  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

@media screen and (min-width: 1158px) {
  .header-logo {
    margin-right: 76px;
  }

  .contacts-list {
    flex-direction: row;
    align-items: center;
    gap: 40px;
  }

  .contacts-link {
    padding: 24px 0;
    font-size: 16px;
    line-height: 1.5;
  }
}

/* Mobile menu */

.mobile-menu {
  position: fixed;
  top: 0;
  left: 0;

  width: 100%;
  height: 100%;
  background-color: #fff;

  transform: translateX(100%);

  opacity: 0;
  pointer-events: none;
  visibility: hidden;
  transition:
    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1),
    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.mobile-menu.is-open {
  opacity: 1;
  pointer-events: all;
  visibility: visible;

  transform: translateX(0);
}

.mobile-menu-container {
  position: relative;
  padding-top: 72px;
  padding-bottom: 40px;
  display: flex;
  flex-direction: column;
  height: 100%;
}

.menu-close-btn {
  position: absolute;
  top: 24px;
  right: 24px;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 24px;
  height: 24px;
  border-radius: 100%;
  background-color: #e7e9fc;
  border: 1px solid rgba(0, 0, 0, 0.1);

  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.menu-close-icon {
  fill: #2e2f42;
  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.menu-close-btn:hover .menu-close-icon,
.menu-close-btn:focus .menu-close-icon {
  fill: #ffffff;
}

.menu-close-btn:hover,
.menu-close-btn:focus {
  background-color: #404bbf;
  border-color: #404bbf;
  outline: none;
}

.menu-nav {
  margin-bottom: auto;
}
.menu-nav-list {
  display: flex;
  flex-direction: column;
  gap: 40px;
}

.menu-nav-link {
  display: block;
  font-weight: 700;
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
  color: #2e2f42;

  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.menu-contacts {
  display: block;
  font-style: normal;
}

.menu-contacts-list {
  display: flex;
  flex-direction: column;
  gap: 24px;
  margin-bottom: 48px;
}

.menu-contacts-link {
  display: block;
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #434455;

  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.menu-contacts-item:first-child .menu-contacts-link {
  color: #4d5ae5;
}

.menu-nav-link:hover,
.menu-nav-link:focus,
.menu-contacts-link:hover,
.menu-contacts-link:focus,
.menu-nav-link.current {
  color: #404bbf;
}

.menu-soc-list {
  display: flex;
  gap: 40px;
  justify-content: flex-start;
}

.menu-soc-item {
  width: 40px;
  height: 40px;
}

.menu-soc-link {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  background-color: #4d5ae5;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.menu-soc-icon {
  fill: #f4f4fd;
}

.menu-soc-link:hover,
.menu-soc-link:focus {
  background-color: #404bbf;
}
/* ... */

